tests/snapshots/errors__errors@blueprint@stderr.snap
---
source: tests/errors.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
Finished compiling target(s)
     Running `target/debug/examples/blueprint`
