tests/snapshots/errors__errors@blueprint@stdout.snap
---
source: tests/errors.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
~ ~ ~ heating ~ ~ ~
=> => pumping => =>
 [_]P coffee! [_]P
