tests/snapshots/errors__errors@provides_on_impl_with_more_than_one_function.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: #[*_provides] is supposed to be placed on an impl block containing one single function - found 2 functions instead
  --> examples/provides_on_impl_with_more_than_one_function.rs:53:1
   |
53 | / impl<H: Heater, P: Pump> CoffeeMaker<H, P> {
54 | |     fn new(
55 | |         logger: Arc<RwLock<CoffeeLogger>>,
56 | |         heater: Rc<RefCell<H>>,
...  |
68 | |     }
69 | | }
   | |_^

error[E0433]: failed to resolve: use of undeclared type `StaticFactoryCoffeeMaker`
  --> examples/provides_on_impl_with_more_than_one_function.rs:36:28
   |
36 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                            ^^^^^^^^^^^ use of undeclared type `StaticFactoryCoffeeMaker`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `errors` (example "provides_on_impl_with_more_than_one_function") due to 2 previous errors
