tests/snapshots/errors__errors_coffee@blueprint.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(0))

Stdout:
~ ~ ~ heating ~ ~ ~
=> => pumping => =>
 [_]P coffee! [_]P 


Stderr:
Finished compiling target(s)
     Running `target/debug/examples/blueprint`
